2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/06_not_bool_aff_bool.deca
// Description :
//      afféctation Not  devant un boolean dans un boolean 
// Resultats :
//    Valide 
//
// Historique :
// cree le 09/01/2024

{
    boolean bool = !true ;
}