2A/05_Projet_GL/src/test/deca/context/invalid/complet/36_aff_bool_Object.deca
// Description :
//   afféctation boolean dans Object 
// Resultats :
//    ligne 10 :le boolean ne peut pas être affecté à Object
// Historique :
//  cree le 16/01/2024

{
    Object o ;
    o = true ; 
}